# yoctomsg

./: Makefile.am  README.md  README.org  bootstrap.mk  configure.ac
src/apps/: yoctocat.cc  yoctomsg.cc  yoctopipe.cc
src/tests/: basic_channel.cc  echo_test.cc  read_channel.cc  shmem_channel.cc  test_channel.cc  write_channel.cc  yoctocat.cc
